--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 5%;
   font-family: "Gill Sans", "Gill Sans MT";
+  display: grid;
+  justify-content: center;
 }
 
 .title {
@@ -17,4 +19,38 @@ body {
   margin-bottom: 0.5em;
   border: unset;
   border-radius: 25px;
+}
+
+.entry-textbox:focus {
+  outline: none;
+}
+
+#entryForm .button {
+  border: unset;
+  border-radius: 25px;
+  padding: 5px 16px;
+  margin-left: 76%;
+}
+
+#entries {
+  background-color: #16697a;
+  color: #ede7e3;
+  font-family: cursive;
+  padding: 2em;
+  max-width: 20em;
+  border: unset;
+  border-radius: 25px;
+  margin-top: 1em;
+}
+
+.entries-nav {
+  padding-bottom: 1em;
+}
+
+.display-entry-button {
+  margin: 0.2em;
+}
+
+.display-entry-button:hover {
+  cursor: pointer;
 }
